- issue2551035 - fix XSS issue in wsgi and cgi when handing url not
  found/404. Reported by hannob at
  https://github.com/python/bugs.python.org/issues/34, issue opened by
  JulienPalard.
- issue2551026: template variable not defined even though it is.
  Fix issue where variables defined in TAL expression are not
  available in the scope of the definition. (Tom Ekberg (tekberg))

2018-07-13 1.6.0

Features:

- issue2550894: migrate test suite and run_test.py to py.test (John Kristensen)
- issue2550880: Ability to choose password store scheme and SSHA
  support. Discussion on devel list is tending in favor of this patch.
  Embedded test works, my manual test with a SSHA password
  assigned to a user allowed the user to log in.   Ran the test suite
  and the tests that were not skipped passed. (applied by John Rouillard)
- New Link/Multilink property attribute 'msg_header_property', can be
  used to configure additional headers in outgoing emails. See
  documentation in ``doc/customizing.txt``. (Ralf Schlatterbeck)
- Allow multiple file uploads: If the html template specifies
  multiple="multiple" for a file upload the user can attach multiple
  files and the form parser now handles this. (Ralf Schlatterbeck)
- issue2550886: Add support for an integer type to join the existing
  number type. This can be used for properties used for ordering,
  counts etc. where a decimal point isn't needed. Developed by
  Anthony (antmail). Doc updates written by John Rouillard. (applied
  by John Rouillard)
- Updated html/_generic.404.html to use the page template. So 404
  errors now include the left hand menu, a proper page title and
  body content. Note added to doc/upgrading.txt on how to add it to
  deployed trackers. (John Rouillard)
- issue2109308 - Allow subject of nosy messages be changed from reactor
  Adds a subject parameter to nosymessage function. Patch initally
  generated by Frank Niessink. Tests, adaptation by John Rouillard.